--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ProjetoDevAndroid</string>
+    <string name="ou">OU</string>
+    <string name="porteiro">Porteiro</string>
+    <string name="professor">Professor</string>
+    <string name="fazer_login_como">Fazer login como:</string>
 </resources>
